Fix home folder in supervisor

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,5 @@
 [program:flask]
-command = ~/anaconda3/bin/python server.py
+command = %(ENV_HOME)s/anaconda3/bin/python server.py
 directory=%(ENV_HOME)s/git_repo/blog
 autorestart = true
 killasgroup = true
